# PhreeDF

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Core_8h_source.html  Core_8hpp_source.html  DisplayPdfInfo_8hpp_source.html  File_8hpp_source.html  LICENSE  MainFrame_8h_source.html  MainFrame_8hpp_source.html  MyApp_8h_source.html  MyFrame_8h_source.html  PhreedfApp_8h_source.html  PhreedfApp_8hpp_source.html  README.md  SplitWindow_8hpp_source.html  ToString_8hpp_source.html  about.html  annotated.html  build_deps.sh  classMainFrame-members.html  classMainFrame.html  classMainFrame__coll__graph.map  classMainFrame__coll__graph.md5  classMyApp-members.html  classMyApp.html  classMyApp__coll__graph.md5  classMyApp__inherit__graph.map  classMyApp__inherit__graph.md5  classMyFrame-members.html  classMyFrame.html  classMyFrame__coll__graph.md5  classPhreedfApp-members.html  classPhreedfApp.html  classPhreedfApp__coll__graph.md5  classPhreedfApp__inherit__graph.map  classes.html  classphdf_1_1MainFrame-members.html  classphdf_1_1MainFrame.html  (+136 more)
.github/workflows/: documentation.yml
docs/: CMakeLists.txt  Doxyfile  README.md
docs/pages/: about.dox
examples/: CMakeLists.txt
examples/src/: main.cpp
include/: Phreedf.h  phreedf.h
include/Phreedf/: Core.h  MyApp.h  MyFrame.h
include/hello/: Core.h
include/phreedf/: Core.hpp  MainFrame.h  MainFrame.hpp  PhreedfApp.h  PhreedfApp.hpp  SplitWindow.hpp
include/phreedf/debug/: DisplayPdfInfo.hpp
include/phreedf/utils/: File.hpp  ToString.hpp
lib/wxWidgets/: CMakeLists.txt
resources/: Info.plist.in  phreedf.icns
scripts/: install_deps.sh
search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  pages_1.js  searchdata.js
src/: MainFrame.cpp  MyApp.cpp  MyFrame.cpp  PhreedfApp.cpp  SplitWindow.cpp  logo.xpm
src/debug/: DisplayPdfInfo.cpp
src/images/: logo.xpm
src/phreedf/: __init__.py  config.py  helper_func.py  menubar.py  pdfviewer.py  phreedf.py
src/phreedf/containers/: file_container.py
src/utils/: File.cpp  ToString.cpp
test/: CMakeLists.txt
test/src/: Phreedf.cpp
tests/: CMakeLists.txt
tests/src/: test_example.cpp
